<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/textFieldColor"
    android:weightSum="5"
    >

    <TableRow
        android:padding="2dp"
        >
        <TextView
            android:id="@+id/bothra_rng_no_row"
            android:layout_column="0"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/rmg_no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/bothra_till_date_row"
            android:layout_column="1"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/tilldate"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/bothra_total_row"
            android:layout_column="2"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/bothra_date_row"
            android:layout_column="2"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/table_date"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/bothra_trips_row"
            android:layout_column="2"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/table_trips"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            />
    </TableRow>

</TableLayout>