<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/table_header_bg"
    android:weightSum="1"
    >

    <TableRow
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/rng_no_row"
            android:layout_column="0"
            android:layout_weight="0.3"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/rmg_no"
            android:textColor="@color/table_header_text"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/till_date_row"
            android:layout_column="1"
            android:layout_weight="0.4"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/tilldate"
            android:textColor="@color/table_header_text"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/total_row"
            android:layout_column="2"
            android:layout_weight="0.3"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/table_header_text"
            android:textStyle="bold"
            />
    </TableRow>

</TableLayout>