<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="4"
    android:background="#fff"
    android:visibility="gone"
    android:id="@+id/main_recycler_view_layoutout">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2.3">

        <TableRow
            android:background="@drawable/table_header_bg"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rmg_no"
                android:textAlignment="center"
                android:textColor="@color/table_header_text"
                android:textSize="@dimen/table_header_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tilldate"
                android:textAlignment="center"
                android:textColor="@color/table_header_text"
                android:textSize="@dimen/table_header_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/table_header_text"
                android:textSize="@dimen/table_header_size"
                android:textStyle="bold" />

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_rmg_no"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/recyclerview_bg">

        </androidx.recyclerview.widget.RecyclerView>

    </TableLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1.6">

        <TableRow
            android:background="@drawable/table_header_bg"
            android:padding="5dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_date"
                android:textAlignment="center"
                android:textColor="@color/table_header_text"
                android:textSize="@dimen/table_header_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_trips"
                android:textAlignment="center"
                android:textColor="@color/table_header_text"
                android:textSize="@dimen/table_header_size"
                android:textStyle="bold" />

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_trips"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/recyclerview_bg">

        </androidx.recyclerview.widget.RecyclerView>

    </TableLayout>

</LinearLayout>