<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ls_root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent2"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/dialog_type_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:fontFamily="@font/source_sans_pro_black"
                android:text="@string/warning"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:drawableLeftCompat="@drawable/alert_exclamation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/dialog_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_regular"
                android:padding="8dp"
                android:text="@string/message"
                android:textColor="#000"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_error_btn_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/primary"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:padding="8dp"
                    android:text="@string/retry"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/dialog_error_btn_close_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white_bg"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:padding="8dp"
                    android:text="@string/close_app"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
