<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:background="@drawable/custom_edittext"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/dialog_type_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/dialog_logo_update"
            android:text="@string/update"
            android:visibility="visible"
            android:fontFamily="@font/source_sans_pro_black"
            android:drawablePadding="10dp"
            android:textAlignment="center"
            android:textColor="#7DD2F0"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/dialog_update_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="Message"
            android:textColor="#000"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_update_btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#25BAEF"
                android:fontFamily="@font/source_sans_pro_regular"
                android:padding="8dp"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/dialog_update_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:fontFamily="@font/source_sans_pro_regular"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>